--- a/app/src/main/res/layout/inflate_recommend_items.xml
+++ b/app/src/main/res/layout/inflate_recommend_items.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ll_recommend_product"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_margin="5dp"
     android:background="@drawable/tab_unselected_indicator_background"
     android:layout_height="wrap_content">
@@ -18,10 +18,11 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:scaleType="fitXY"
+            android:layout_marginLeft="10dp"
             android:src="@drawable/groomingslider1" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_10"
             android:orientation="vertical">
@@ -51,6 +52,22 @@
 
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/tv_view_complete_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Offers: 1500 INR"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/sp_16" />
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/tv_shipping_charges"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Offers: 1500 INR"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/sp_16" />
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/tv_delivered_in"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Offers: 1500 INR"
