--- a/app/src/main/res/layout/frag_schedule_order.xml
+++ b/app/src/main/res/layout/frag_schedule_order.xml
@@ -66,7 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:hint="Enter shipping address" />
+                android:hint="Enter shipping Date" />
 
             <ImageView
                 android:id="@+id/iv_calendar"
