--- a/app/src/main/res/layout/inflate_final_item.xml
+++ b/app/src/main/res/layout/inflate_final_item.xml
@@ -40,7 +40,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="3dp"
-                    android:text="status" />
+                    android:text="Receipt" />
 
             </LinearLayout>
 
@@ -82,6 +82,48 @@
                     android:text="Seller Details"
                     android:textStyle="bold" />
             </LinearLayout>
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_recommended"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="25dp">
+
+        <ImageView
+            android:id="@+id/iv_product_recommended_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_default_category" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="15dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Recommended Selected"
+                android:background="#30000000"
+                android:textColor="#FFFFFF"
+                android:padding="5dp"/>
+
+            <TextView
+                android:id="@+id/tv_recommended_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Product Name"
+                android:textStyle="bold" />
+
+
         </LinearLayout>
 
     </LinearLayout>
@@ -89,6 +131,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
+        android:layout_marginTop="5dp"
         android:background="#30000000" />
 
 </LinearLayout>
