--- a/app/src/main/res/layout/drawer_fragment_first_layout.xml
+++ b/app/src/main/res/layout/drawer_fragment_first_layout.xml
@@ -13,160 +13,193 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:descendantFocusability="blocksDescendants"
-            android:focusableInTouchMode="true">
+            android:focusableInTouchMode="true"
+            android:orientation="vertical">
 
 
             <com.appentus.materialking.utility.NonScrollExpandableListView
                 android:id="@+id/lvExpCategory"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:groupIndicator="@null"
                 android:layout_margin="@dimen/dp_10"
-                android:layout_width="wrap_content"/>
-
-
-
+                android:groupIndicator="@null" />
 
             <android.support.v7.widget.RecyclerView
-                android:visibility="gone"
                 android:id="@+id/recycler_category"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/dp_10"
                 android:nestedScrollingEnabled="false"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dp_10" />
+                android:visibility="gone" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/dp_30"
-                android:layout_marginEnd="@dimen/dp_10"
-                android:layout_marginStart="@dimen/dp_10"
-                android:layout_marginTop="@dimen/dp_30"
-                android:background="@color/colorWhite"
-                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/dp_10">
+                    android:layout_marginBottom="@dimen/dp_30"
+                    android:layout_marginEnd="@dimen/dp_10"
+                    android:layout_marginStart="@dimen/dp_10"
+                    android:layout_marginTop="@dimen/dp_30"
+                    android:background="@color/colorWhite"
+                    android:orientation="vertical">
 
-                    <ImageView
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/bricks" />
-
-                    <android.support.v7.widget.AppCompatTextView
-                        android:layout_width="0dp"
+                    <LinearLayout
+                        android:id="@+id/ll_my_orders"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:maxLines="1"
-                        android:padding="@dimen/dp_10"
-                        android:text="HELP"
-                        android:textColor="@color/colorBlack"
-                        android:textSize="13sp" />
+                        android:orientation="horizontal"
+                        android:padding="@dimen/dp_10">
 
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ic_arrow_forward" />
-                </LinearLayout>
+                        <ImageView
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/bricks" />
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1px"
-                    android:background="@color/colorGrey" />
+                        <android.support.v7.widget.AppCompatTextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:maxLines="1"
+                            android:padding="@dimen/dp_10"
+                            android:text="MY ORDERS"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="13sp" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/dp_10">
+                        <ImageView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/ic_arrow_forward" />
+                    </LinearLayout>
 
-                    <ImageView
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/bricks" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1px"
+                        android:background="@color/colorGrey" />
 
-                    <android.support.v7.widget.AppCompatTextView
-                        android:layout_width="0dp"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:maxLines="1"
-                        android:padding="@dimen/dp_10"
-                        android:text="FAQS"
-                        android:textColor="@color/colorBlack"
-                        android:textSize="13sp" />
+                        android:orientation="horizontal"
+                        android:padding="@dimen/dp_10">
 
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ic_arrow_forward" />
-                </LinearLayout>
+                        <ImageView
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/bricks" />
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1px"
-                    android:background="@color/colorGrey" />
+                        <android.support.v7.widget.AppCompatTextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:maxLines="1"
+                            android:padding="@dimen/dp_10"
+                            android:text="HELP"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="13sp" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/dp_10">
+                        <ImageView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/ic_arrow_forward" />
+                    </LinearLayout>
 
-                    <ImageView
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/bricks" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1px"
+                        android:background="@color/colorGrey" />
 
-                    <android.support.v7.widget.AppCompatTextView
-                        android:layout_width="0dp"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:maxLines="1"
-                        android:padding="@dimen/dp_10"
-                        android:text="CONTACTS"
-                        android:textColor="@color/colorBlack"
-                        android:textSize="13sp" />
+                        android:orientation="horizontal"
+                        android:padding="@dimen/dp_10">
 
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ic_arrow_forward" />
+                        <ImageView
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/bricks" />
+
+                        <android.support.v7.widget.AppCompatTextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:maxLines="1"
+                            android:padding="@dimen/dp_10"
+                            android:text="FAQS"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="13sp" />
+
+                        <ImageView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/ic_arrow_forward" />
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1px"
+                        android:background="@color/colorGrey" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:padding="@dimen/dp_10">
+
+                        <ImageView
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/bricks" />
+
+                        <android.support.v7.widget.AppCompatTextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:maxLines="1"
+                            android:padding="@dimen/dp_10"
+                            android:text="CONTACTS"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="13sp" />
+
+                        <ImageView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/ic_arrow_forward" />
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1px"
+                        android:background="@color/colorGrey" />
+
                 </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1px"
-                    android:background="@color/colorGrey" />
-
-            </LinearLayout>
 
                 <android.support.v7.widget.AppCompatButton
                     android:id="@+id/btLogout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary"
                     android:text="LOG OUT"
                     android:textAllCaps="true"
-                    android:textColor="@color/colorWhite"
-                    android:background="@color/colorPrimary"/>
+                    android:textColor="@color/colorWhite" />
             </LinearLayout>
-
 
 
         </LinearLayout>
