--- a/app/src/main/res/layout/inflate_cart_item.xml
+++ b/app/src/main/res/layout/inflate_cart_item.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/dp_05"
     app:dragEdge="right"
-    app:mode="same_level"
-    android:layout_margin="@dimen/dp_05">
+    app:mode="same_level">
 
     <FrameLayout
         android:layout_width="100dp"
@@ -14,11 +14,12 @@
         android:background="#C04933">
 
         <ImageView
+            android:id="@+id/iv_delete"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:src="@drawable/cut_icon"
-            android:padding="@dimen/dp_20"/>
+            android:padding="@dimen/dp_20"
+            android:src="@drawable/cut_icon" />
 
     </FrameLayout>
 
@@ -34,113 +35,153 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:layout_marginBottom="@dimen/dp_05"
-                    android:layout_marginTop="@dimen/dp_05"
-                    android:orientation="horizontal"
-                    android:weightSum="1.0">
+                    android:layout_height="wrap_content"
+                    android:padding="7dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/iv_item_image_cart"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:adjustViewBounds="true"
+                        android:padding="@dimen/dp_10"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/ic_default_category" />
+
 
                     <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight=".40"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/iv_item_image_cart"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:padding="@dimen/dp_10"
-                            android:scaleType="fitXY"
-                            android:src="@drawable/groomingslider2" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight=".60"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:orientation="vertical">
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
-                            android:orientation="horizontal"
-                            android:layout_weight="1">
+                            android:layout_weight="1"
+                            android:orientation="vertical">
 
                             <android.support.v7.widget.AppCompatTextView
                                 android:id="@+id/tv_item_name"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:paddingTop="@dimen/dp_15"
-                                android:layout_weight="1"
                                 android:text="Bharathi OPC 43 Grade"
-                                android:gravity="top|center"
-                                android:textSize="@dimen/sp_14"
+                                android:textSize="16sp"
+                                android:textColor="#000000"
                                 android:textStyle="bold" />
 
-                            <ImageView
-                                android:id="@+id/iv_delete"
-                                android:layout_width="25dp"
-                                android:layout_height="25dp"
-                                android:src="@drawable/close_icon"
-                                android:tint="#000000"/>
-
-                        </LinearLayout>
-
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:orientation="horizontal"
-                            android:layout_marginTop="@dimen/dp_15"
-                            android:layout_marginBottom="@dimen/dp_20">
-
-                            <android.support.v7.widget.AppCompatTextView
-                                android:layout_width="wrap_content"
+                            <LinearLayout
+                                android:id="@+id/ll_brand"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginEnd="@dimen/dp_15"
-                                android:text="Qty"
-                                android:paddingBottom="@dimen/dp_05"
-                                android:paddingTop="@dimen/dp_05"
-                                android:textSize="@dimen/sp_16" />
+                                android:orientation="horizontal"
+                                android:layout_marginTop="5dp"
+                                android:weightSum="3">
 
-                            <android.support.v7.widget.AppCompatTextView
-                                android:id="@+id/tv_minus_item"
-                                android:layout_width="20dp"
-                                android:layout_height="20dp"
-                                android:background="@drawable/ic_minus_icon"
-                                android:textStyle="bold" />
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:text="Brand"
+                                    android:textColor="#000000"
+                                    android:textStyle="bold" />
 
-                            <android.support.v7.widget.AppCompatTextView
-                                android:id="@+id/tv_quantity_cart"
-                                android:layout_width="wrap_content"
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text=":" />
+
+                                <TextView
+                                    android:id="@+id/tv_brand"
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="7dp"
+                                    android:layout_weight="2"
+                                    android:text="Brand" />
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:id="@+id/ll_size"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginStart="@dimen/dp_15"
-                                android:layout_marginEnd="@dimen/dp_15"
-                                android:paddingStart="@dimen/dp_20"
-                                android:paddingEnd="@dimen/dp_20"
-                                android:paddingTop="@dimen/dp_05"
-                                android:paddingBottom="@dimen/dp_05"
-                                android:background="@drawable/cart_quantity_background"
-                                android:text="10"
-                                android:textSize="@dimen/sp_16" />
+                                android:orientation="horizontal"
+                                android:weightSum="3">
 
-                            <android.support.v7.widget.AppCompatTextView
-                                android:id="@+id/tv_plus_item"
-                                android:layout_width="20dp"
-                                android:layout_height="20dp"
-                                android:background="@drawable/ic_plus_icon" />
+                                <TextView
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:text="Size"
+                                    android:textColor="#000000"
+                                    android:textStyle="bold" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text=":" />
+
+                                <TextView
+                                    android:id="@+id/tv_size"
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="7dp"
+                                    android:layout_weight="2"
+                                    android:text="Size" />
+
+                            </LinearLayout>
 
                         </LinearLayout>
 
                     </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <android.support.v7.widget.AppCompatTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/dp_15"
+                        android:paddingBottom="@dimen/dp_05"
+                        android:paddingTop="@dimen/dp_05"
+                        android:text="Qty"
+                        android:textSize="@dimen/sp_16" />
+
+                    <android.support.v7.widget.AppCompatTextView
+                        android:id="@+id/tv_minus_item"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:background="@drawable/ic_minus_icon"
+                        android:textStyle="bold" />
+
+                    <android.support.v7.widget.AppCompatTextView
+                        android:id="@+id/tv_quantity_cart"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/dp_15"
+                        android:layout_marginStart="@dimen/dp_15"
+                        android:background="@drawable/cart_quantity_background"
+                        android:paddingBottom="@dimen/dp_05"
+                        android:paddingEnd="@dimen/dp_20"
+                        android:paddingStart="@dimen/dp_20"
+                        android:paddingTop="@dimen/dp_05"
+                        android:text="10"
+                        android:textSize="@dimen/sp_16" />
+
+                    <android.support.v7.widget.AppCompatTextView
+                        android:id="@+id/tv_plus_item"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:background="@drawable/ic_plus_icon" />
 
                 </LinearLayout>
 
