--- a/app/src/main/res/layout/inflate_final_item.xml
+++ b/app/src/main/res/layout/inflate_final_item.xml
@@ -69,6 +69,25 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_brand"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Price Placed" />
+
+                <TextView
+                    android:id="@+id/tv_size"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Price Placed" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
                     android:id="@+id/tv_delivered_in"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
